[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://menu/setting-menu/audio-setting/audio_setting.gd" type="Script" id=2]

[node name="audio_setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 188.0

[node name="music" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 291.0
margin_bottom = 144.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/music"]
margin_right = 291.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="hbox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/music"]
margin_top = 44.0
margin_right = 291.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/music/hbox"]
margin_right = 10.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="music" type="Button" parent="VBoxContainer/HBoxContainer2/music/hbox"]
margin_left = 14.0
margin_right = 291.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "On"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 295.0
margin_right = 305.0
margin_bottom = 144.0
rect_min_size = Vector2( 10, 0 )

[node name="sfx" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 309.0
margin_right = 600.0
margin_bottom = 144.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/sfx"]
margin_right = 291.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Sfx"
align = 1
valign = 1

[node name="hbox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/sfx"]
margin_top = 44.0
margin_right = 291.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )

[node name="sfx" type="Button" parent="VBoxContainer/HBoxContainer2/sfx/hbox"]
margin_right = 277.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Enable"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/sfx/hbox"]
margin_left = 281.0
margin_right = 291.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 600.0
margin_bottom = 232.0
rect_min_size = Vector2( 0, 40 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/music/hbox/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/sfx/hbox/sfx" to="." method="_on_sfx_pressed"]
